test/corpus/fullClass.txt
======================================
 Simple class with code
======================================

{
  public Hello();
    Code:
      stack=1, locals=1, args_size=1
         0: aload_0
         1: invokespecial #1
         4: return
      LineNumberTable:
        line 1: 0
}
SourceFile: "Hello.java"

---

(source_file
  (block
    (class_definition 
      (identifier)
     (code_def
            (code_info
              (code_info_stack
                (number))
              (code_info_locals
                (number))
              (code_info_args_size
                (number))
              (numered_instruction
                (number)
                (instruction))
              (numered_instruction
                (number)
                (instruction
                  (number)))
              (numered_instruction
                (number)
                (instruction)))
            (line_number_table_def
              (numered_line
                (number)
                (number)))))
 
  )
  (source_file_def)
)
